Push relationship behind facade