@@ -9,9 +9,10 @@ import com.tramchester.domain.places.Station;
 import com.tramchester.domain.places.StationLocalityGroup;
 import com.tramchester.graph.GraphDatabase;
 import com.tramchester.graph.TransportRelationshipTypes;
-import com.tramchester.graph.facade.*;
+import com.tramchester.graph.facade.GraphDirection;
+import com.tramchester.graph.facade.GraphNode;
+import com.tramchester.graph.facade.ImmutableGraphRelationship;
 import com.tramchester.graph.facade.neo4j.ImmutableGraphNode;
-import com.tramchester.graph.facade.neo4j.ImmutableGraphRelationshipNeo4J;
 import com.tramchester.graph.facade.neo4j.MutableGraphTransactionNeo4J;
 import com.tramchester.graph.graphbuild.GraphLabel;
 import com.tramchester.graph.graphbuild.StationGroupsGraphBuilder;
@@ -77,10 +78,10 @@ public class StationLocalityGroupsGraphBuilderTest {
         assertFalse(toOthers.isEmpty());
 
         toOthers.forEach(node -> {
-            List<ImmutableGraphRelationshipNeo4J> outbounds = node.getRelationships(txn, GraphDirection.Outgoing, GROUPED_TO_GROUPED).toList();
+            List<ImmutableGraphRelationship> outbounds = node.getRelationships(txn, GraphDirection.Outgoing, GROUPED_TO_GROUPED).toList();
             assertFalse(outbounds.isEmpty(), node.getAllProperties().toString());
 
-            ImmutableGraphRelationshipNeo4J link = outbounds.get(0);
+            ImmutableGraphRelationship link = outbounds.getFirst();
             Duration cost = link.getCost();
             assertTrue(cost.compareTo(walkingDuration) <=0, "got " + cost + " more than " + walkingDuration);
 
@@ -98,11 +99,11 @@ public class StationLocalityGroupsGraphBuilderTest {
 
         assertEquals(1, nodes.size());
 
-        ImmutableGraphNode stationGroupNode = nodes.get(0);
+        ImmutableGraphNode stationGroupNode = nodes.getFirst();
 
         assertEquals(stationGroupNode.getStationGroupId(), stationGroupId);
 
-        List<ImmutableGraphRelationshipNeo4J> childLinks = stationGroupNode.getRelationships(txn,
+        List<ImmutableGraphRelationship> childLinks = stationGroupNode.getRelationships(txn,
                 GraphDirection.Outgoing, TransportRelationshipTypes.GROUPED_TO_CHILD).toList();
 
         StationLocalityGroup group = stationGroupsRepository.getStationGroup(stationGroupId);
@@ -120,7 +121,7 @@ public class StationLocalityGroupsGraphBuilderTest {
 
         childNodes.forEach(childNode -> {
             assertTrue(childNode.hasRelationship(GraphDirection.Outgoing, GROUPED_TO_PARENT), childNode.getStationId().toString());
-            ImmutableGraphRelationshipNeo4J toParent = childNode.getSingleRelationship(txn, GROUPED_TO_PARENT, GraphDirection.Outgoing);
+            ImmutableGraphRelationship toParent = childNode.getSingleRelationship(txn, GROUPED_TO_PARENT, GraphDirection.Outgoing);
             GraphNode endNode = toParent.getEndNode(txn);
             assertEquals(stationGroupNode.getId(), endNode.getId(), "wrong parent for " + childNode.getStationId());
 
